fixing main text div with images and overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ margin: 8px;
     border-width: 1px;
     border-radius: 25px;
     letter-spacing: 2px;
-    margin-right: 20px;
+    margin-right: 30px;
   }
 
   .contact-button:hover {
@@ -117,11 +117,15 @@ body {
   text-align: center;
   padding: 50px;
   margin-bottom: 100px;
+  font-size: 24px;
 }
 
 .main-text-div-inner {
   display: block;
   flex: 1 1 auto;
+  line-height: 50px;
+  margin-top: 30px;
+  margin-bottom: 70px;
 }
 
 .main-text {
@@ -212,6 +216,7 @@ a {
 .bubble-link-arrow:hover {
   background-color: #7a6151;
   cursor: pointer;
+  color: white;
 }
 
   .marquee {
@@ -254,12 +259,18 @@ a {
 }
 
 .symbol {
-  font-size: 70px;
+  font-size: 40px;
 }
 
 .edenname {
   text-shadow: 0 0 20px #fff171;
   font-size: 70px;
+  font-weight: bold;
+}
+
+b {
+  text-shadow: 0 0 20px #fff171;
+  font-size: 30px;
   font-weight: bold;
 }
 
@@ -278,4 +289,5 @@ a {
 
 .button-symbol-item {
   display: inline-block;
+  position: relative;
 }
